--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-node_modules
+# compiled output
+/dist
+/node_modules
+/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS
+.DS_Store
+
+# IDE
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Env
+.env
+
+# Uploads (local storage)
+/uploads
+
+# Coverage
+/coverage
