feat: mudando configuração de banco de dados para supabase e aplicando correções para o prisma

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-# Database
-DATABASE_URL=postgresql://acutia:acutia@localhost:5432/acutia_lens
+# Database (Supabase PostgreSQL)
+DATABASE_URL=postgresql://postgres.[project-ref]:[password]@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+DIRECT_URL=postgresql://postgres.[project-ref]:[password]@aws-0-sa-east-1.pooler.supabase.com:5432/postgres
 
-# JWT
-JWT_SECRET=your-secret-key-change-me
-JWT_EXPIRATION=15m
-JWT_REFRESH_SECRET=your-refresh-secret-change-me
-JWT_REFRESH_EXPIRATION=7d
+# Supabase
+SUPABASE_URL=https://glyhplvvblysuypnnady.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_JWT_SECRET=your-jwt-secret-from-settings
 
-# Storage (Supabase ou S3 — fase futura)
-STORAGE_BUCKET_URL=https://xxx.supabase.co/storage/v1
-STORAGE_BUCKET_NAME=photos
-STORAGE_ACCESS_KEY=
-STORAGE_SECRET_KEY=
+# Storage (Magalu Cloud Object Storage — S3 compatible)
+STORAGE_ENDPOINT=https://br-se1.magaluobjects.com
+STORAGE_BUCKET=disaster-recovery
+STORAGE_ACCESS_KEY=your-access-key
+STORAGE_SECRET_KEY=your-secret-key
 
 # Mercado Pago (fase futura)
 MERCADOPAGO_ACCESS_TOKEN=
