--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD — Validate & Deploy
+name: CI/CD — Build, Push & Deploy
 
 on:
   push:
@@ -8,6 +8,9 @@ on:
 
 env:
   NODE_VERSION: '22'
+  REGISTRY: container-registry.br-se1.magalu.cloud
+  REGISTRY_NAME: disaster-recovery
+  IMAGE_NAME: acutia-lens-api
 
 jobs:
   validate:
@@ -28,6 +31,9 @@ jobs:
 
       - name: Generate Prisma Client
         run: npx prisma generate
+        env:
+          DATABASE_URL: 'postgresql://dummy:dummy@localhost:5432/dummy'
+          DIRECT_URL: 'postgresql://dummy:dummy@localhost:5432/dummy'
 
       - name: Build
         run: npm run build
@@ -35,11 +41,38 @@ jobs:
       - name: Lint
         run: npm run lint
 
-  deploy:
-    name: 🚀 Deploy to Coolify
+  build-and-push:
+    name: 🐳 Build & Push Image
     runs-on: ubuntu-latest
     needs: validate
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Login to Magalu Container Registry
+        run: |
+          echo "${{ secrets.REGISTRY_PASSWORD }}" | \
+          docker login ${{ env.REGISTRY }} \
+            -u "${{ secrets.REGISTRY_USERNAME }}" \
+            --password-stdin
+
+      - name: Build Docker image
+        run: |
+          docker build \
+            -t ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            -t ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:latest \
+            .
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          docker push ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:latest
+
+  deploy:
+    name: 🚀 Deploy to Coolify
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
     steps:
       - name: Trigger Coolify Webhook
@@ -47,5 +80,3 @@ jobs:
           curl -X GET "${{ secrets.COOLIFY_WEBHOOK_URL }}" \
             -H "Accept: application/json" \
             --fail --silent --show-error
-        env:
-          COOLIFY_WEBHOOK_URL: ${{ secrets.COOLIFY_WEBHOOK_URL }}
